# nifty-ray-marcher

./: README.md  meson.build
src/: App.cpp  App.h  RaymarcherApp.cpp  RaymarcherApp.h  main.cpp
src/entity/: Camera.cpp  Camera.h  CircleObject.cpp  CircleObject.h  CollisionObject.cpp  CollisionObject.h  March.cpp  March.h  Ray.cpp  Ray.h  RectangleObject.cpp  RectangleObject.h
src/utility/: Drawable.cpp  Drawable.h  Misc.cpp  Misc.h  Random.cpp  Random.h  Vec2D.cpp  Vec2D.h
